# amber-lsp

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  README.md  Tarpaulin.toml  build.rs  codecov.yml  flake.nix  lib.ab  run_coverage.ab  test.ab
.cargo/: config.toml
.github/workflows/: quality-check.yml  release.yml
clients/vscode/: .vscodeignore  LICENSE.md  README.md  amber.tmLanguage.json  esbuild.js  language-configuration.json  package-lock.json  package.json  package_vscode_ext.ab
clients/vscode/client/: package-lock.json  package.json
clients/vscode/src/: extension.ts
formatter/: Cargo.toml
formatter/src/: lib.rs  main.rs
formatter/src/alpha040/: mod.rs
lib/: Cargo.toml
lib/src/: amber_version.rs  backend.rs  lib.rs  stdlib.rs
lib/src/analysis/: mod.rs  types.rs
lsp/: Cargo.toml
lsp/src/: backend.rs  files.rs  main.rs  utils.rs
lsp/src/analysis/: mod.rs
lsp/src/analysis/alpha034/: mod.rs
lsp/src/analysis/alpha035/: exp.rs
lsp/src/grammar/: mod.rs
lsp/src/grammar/alpha034/expressions/: range.rs  sum.rs
lsp/src/grammar/alpha034/statements/: block.rs  if_cond.rs  keywords.rs  modifiers.rs  shorthands.rs
lsp/src/grammar/alpha035/: mod.rs
lsp/src/grammar/alpha035/expressions/atom/: array.rs  mod.rs  null.rs  parentheses.rs
lsp/src/grammar/alpha035/statements/: loops.rs  mod.rs  shebang.rs
lsp/src/grammar/alpha040/: global.rs  parser.rs
lsp/src/grammar/alpha040/expressions/: and.rs  range.rs  ternary.rs
lsp/src/grammar/alpha040/expressions/atom/: array.rs  exit.rs  number.rs  status.rs  text.rs
lsp/src/grammar/alpha040/statements/: failed.rs  loops.rs  modifiers.rs  shebang.rs  var_set.rs
resources/alpha040/: builtin.ab
src/: backend.rs  files.rs  fs.rs  lib.rs  main.rs  parser.rs  paths.rs  stdlib.rs
src/analysis/: mod.rs  types.rs
src/analysis/alpha034/: exp.rs  global.rs  mod.rs  stmnts.rs
src/analysis/alpha035/: exp.rs  global.rs  stmnts.rs
src/analysis/alpha040/: exp.rs  global.rs  stmnts.rs
src/grammar/: alpha034.rs  mod.rs
src/grammar/alpha034/: global.rs  jump_definition.rs  lexer.rs  mod.rs  parser.rs  semantic_tokens.rs  symbol_table.rs
src/grammar/alpha035/: global.rs  mod.rs  parser.rs  semantic_tokens.rs
src/grammar/alpha040/: global.rs  mod.rs  parser.rs  semantic_tokens.rs
src/symbol_table/: mod.rs
src/symbol_table/alpha034/: exp.rs  global.rs  mod.rs  stmnts.rs
src/tests/grammar/: alpha034.rs
tests/: mod.rs
tests/analysis/: alpha034.rs
tests/analysis/snapshots/: r#mod__analysis__alpha034__function_definition-2.snap  r#mod__analysis__alpha034__function_definition-3.snap  r#mod__analysis__alpha034__function_definition-4.snap  r#mod__analysis__alpha034__function_definition-5.snap  r#mod__analysis__alpha034__function_definition-6.snap  r#mod__analysis__alpha034__function_definition-7.snap  r#mod__analysis__alpha034__function_definition-8.snap  r#mod__analysis__alpha034__function_definition.snap  r#mod__analysis__alpha034__generic_type_inference-2.snap  r#mod__analysis__alpha034__generic_type_inference-3.snap  r#mod__analysis__alpha034__generic_type_inference.snap  r#mod__analysis__alpha034__generics_reference-2.snap  r#mod__analysis__alpha034__generics_reference-3.snap  r#mod__analysis__alpha034__generics_reference-4.snap  r#mod__analysis__alpha034__generics_reference.snap  r#mod__analysis__alpha034__import_all_symbols-2.snap  r#mod__analysis__alpha034__import_all_symbols-3.snap  r#mod__analysis__alpha034__import_all_symbols.snap  r#mod__analysis__alpha034__import_specific_symbols-2.snap  r#mod__analysis__alpha034__public_definitions-2.snap  r#mod__analysis__alpha034__symbol_reference_in_expression-2.snap  r#mod__analysis__alpha034__symbol_reference_in_expression.snap  r#mod__analysis__alpha034__variable_definition-2.snap  r#mod__analysis__alpha034__variable_definition.snap  r#mod__analysis__alpha034__variable_scope-2.snap  r#mod__analysis__alpha034__variable_scope-3.snap  r#mod__analysis__alpha034__variable_scope-4.snap  r#mod__analysis__alpha034__variable_scope-5.snap  r#mod__analysis__alpha034__variable_scope-6.snap  r#mod__analysis__alpha034__variable_scope-7.snap  r#mod__analysis__alpha034__variable_scope-8.snap  r#mod__analysis__alpha034__variable_scope.snap  r#mod__symbol_table__alpha034__function_definition-2.snap  r#mod__symbol_table__alpha034__function_definition-4.snap  r#mod__symbol_table__alpha034__function_definition-5.snap  r#mod__symbol_table__alpha034__function_definition-8.snap  r#mod__symbol_table__alpha034__function_definition.snap  r#mod__symbol_table__alpha034__import_all_symbols-2.snap  r#mod__symbol_table__alpha034__public_definitions-2.snap  r#mod__symbol_table__alpha034__std_import-2.snap  (+3 more)
tests/grammar/: alpha034.rs  alpha035.rs  alpha040.rs  mod.rs
tests/symbol_table/: alpha034.rs
(+492 files in other folders)
