[package]
name = "amber-lsp"
version = "0.1.0"
edition = "2021"
# build = "build.rs"

[dependencies]
tokio = { version = "1.39.1", features = ["full"] }
tower-lsp = "0.20.0"
phf = { version = "0.11", features = ["macros"] }
dashmap = "6.0.1"
ropey = "1.6.1"
chumsky = { git = "https://github.com/KrosFire/chumsky", branch = "legacy" }
heraclitus-compiler = "1.8.0"
serde_json = "1.0.128"
rangemap = "1.5.1"
indexmap = "2.6.0"

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }

[build-dependencies]
fs_extra = "1.3.0"
