[package]
name = "amber-lsp"
version = "0.1.1-alpha"
edition = "2021"
repository = "https://github.com/KrosFire/amber-lsp"

[dependencies]
tokio = { version = "1.39.1", features = ["full"] }
tower-lsp = "0.20.0"
phf = { version = "0.11", features = ["macros"] }
dashmap = "6.0.1"
ropey = "1.6.1"
chumsky = { git = "https://github.com/KrosFire/chumsky", rev = "406ea80", features = [
  "default",
  "label",
] }
heraclitus-compiler = "1.8.2"
serde_json = "1.0.128"
rangemap = "1.5.1"
indexmap = "2.6.0"
clap = { version = "4.5.21", features = ["derive"] }
include_dir = "0.7.4"
tracing = "0.1"
tracing-subscriber = "0.3"
rustc-hash = "2.1.1"
tracing-appender = "0.2.3"
thiserror = "2.0.12"

[dev-dependencies]
insta = { version = "1.39.0", features = ["yaml"] }

[build-dependencies]
fs_extra = "1.3.0"

# The profile that 'cargo dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"

# Config for 'cargo dist'
[workspace.metadata.dist]
# The preferred cargo-dist version to use in CI (Cargo.toml SemVer syntax)
cargo-dist-version = "0.20.0"
# CI backends to support
ci = "github"
# The installers to generate for each app
installers = []
# Target platforms to build apps for (Rust target-triple syntax)
targets = ["aarch64-apple-darwin", "x86_64-apple-darwin", "x86_64-unknown-linux-gnu", "x86_64-unknown-linux-musl", "x86_64-pc-windows-msvc"]
# Publish jobs to run in CI
pr-run-mode = "plan"
# Skip checking whether the specified configuration files are up to date
allow-dirty = ["ci"]
unix-archive = ".tar.gz"
