[package]
name = "amber-fmt"
version = "0.1.10"
edition = "2024"

[dependencies]
lib = { workspace = true }
clap = { workspace = true, features = ["derive"] }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }

# tokio = { workspace = true, features = ["full"] }
# tower-lsp-server = { workspace = true }
# phf = { workspace = true, features = ["macros"] }
# dashmap = { workspace = true }
# ropey = { workspace = true }
# chumsky = { workspace = true, features = ["default", "label"] }
# heraclitus-compiler = { workspace = true }
# serde_json = { workspace = true }
# rangemap = { workspace = true }
# indexmap = { workspace = true }
# include_dir = { workspace = true }
# rustc-hash = { workspace = true }

# [dev-dependencies]
# insta = { workspace = true, features = ["yaml"] }

# [build-dependencies]
# fs_extra = "1.3.0"
