[package]
name = "amber-lsp"
version = "0.1.10"
edition = "2021"
repository = "https://github.com/KrosFire/amber-lsp"

[dependencies]
tokio = { workspace = true, features = ["full"] }
tower-lsp-server = { workspace = true }
phf = { workspace = true, features = ["macros"] }
dashmap = { workspace = true }
ropey = { workspace = true }
chumsky = { workspace = true, features = ["default", "label"] }
heraclitus-compiler = { workspace = true }
serde_json = { workspace = true }
rangemap = { workspace = true }
indexmap = { workspace = true }
clap = { workspace = true, features = ["derive"] }
include_dir = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
rustc-hash = { workspace = true }
tracing-appender = { workspace = true }
thiserror = { workspace = true }

[dev-dependencies]
insta = { workspace = true, features = ["yaml"] }

[build-dependencies]
fs_extra = "1.3.0"
